--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "particles": "^0.3.1",
+    "particles.vue": "^2.16.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.25.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
